[gd_scene load_steps=9 format=3 uid="uid://nmbpa735v1p8"]

[ext_resource type="Texture2D" uid="uid://b1mevotqu5lra" path="res://Assets/Shop/Spud_desk.png" id="1_njw01"]
[ext_resource type="Texture2D" uid="uid://bwfpsi7ikwo8d" path="res://Assets/Shop/Spud_Idle.png" id="2_6rmb7"]
[ext_resource type="Texture2D" uid="uid://c68k5wxc7dxc2" path="res://Assets/Shop/Spud_talk.png" id="3_jwdga"]
[ext_resource type="Texture2D" uid="uid://cfvbx5510oq1o" path="res://Assets/dollar.png" id="4_jwdga"]
[ext_resource type="Texture2D" uid="uid://cfovc2jo6at3l" path="res://Assets/setting placeholder.png" id="5_uxpe5"]
[ext_resource type="Texture2D" uid="uid://b52cmpthoeur0" path="res://Assets/Point.png" id="6_uxpe5"]
[ext_resource type="Script" uid="uid://bagqajnp3js1j" path="res://Scenes/shop.gd" id="7_5ycja"]

[sub_resource type="SpriteFrames" id="SpriteFrames_uxpe5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6rmb7")
}],
"loop": true,
"name": &"Spud_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6rmb7")
}, {
"duration": 1.0,
"texture": ExtResource("3_jwdga")
}],
"loop": true,
"name": &"Spud_talk",
"speed": 4.0
}]

[node name="Shop scene" type="Node2D"]

[node name="Spud" type="AnimatedSprite2D" parent="."]
position = Vector2(389.5, 802.184)
scale = Vector2(4.18056, 4.20843)
sprite_frames = SubResource("SpriteFrames_uxpe5")
animation = &"Spud_idle"
autoplay = "Spud_idle"
frame_progress = 0.568409

[node name="Shop ui" type="CanvasLayer" parent="."]

[node name="Desk" type="TextureRect" parent="Shop ui"]
z_index = 1
anchors_preset = -1
anchor_left = 0.393
anchor_top = 0.674
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.220001
offset_top = -0.0400391
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("1_njw01")

[node name="New_counter" type="PanelContainer" parent="Shop ui"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Shop ui/New_counter"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Shop ui/New_counter/HBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("4_jwdga")

[node name="RichTextLabel" type="RichTextLabel" parent="Shop ui/New_counter/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0.243137, 0.643137, 0.27451, 1)
theme_override_colors/font_selected_color = Color(0.243387, 0.641238, 0.274796, 1)
theme_override_font_sizes/normal_font_size = 32
text = "Place holder"
vertical_alignment = 1

[node name="Shop pause menu" type="TextureButton" parent="Shop ui"]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.802
anchor_right = 1.0
anchor_bottom = 0.187
offset_left = -0.0799866
offset_top = 80.0
offset_bottom = -0.520004
texture_normal = ExtResource("5_uxpe5")
ignore_texture_size = true
stretch_mode = 0

[node name="Shop button" type="Control" parent="Shop ui"]
layout_mode = 3
anchors_preset = 0
offset_left = 540.0
offset_top = 960.0
offset_right = 1081.0
offset_bottom = 1920.0
rotation = 3.14159

[node name="Leave shop" type="TextureButton" parent="Shop ui/Shop button"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.868519
anchor_top = 0.463021
anchor_right = 0.998
anchor_bottom = 0.536
offset_left = 2.13147
offset_top = -0.463013
offset_right = 3.21344
offset_bottom = 0.47699
grow_vertical = 2
texture_normal = ExtResource("6_uxpe5")
ignore_texture_size = true
stretch_mode = 0
flip_v = true
script = ExtResource("7_5ycja")

[node name="Label" type="Label" parent="Shop ui/Shop button"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.871
anchor_top = 0.486
anchor_right = 1.0
anchor_bottom = 0.517
offset_left = 68.789
offset_top = 0.439941
offset_right = 68.0
offset_bottom = -15.36
grow_vertical = 2
rotation = 3.14159
theme_override_font_sizes/font_size = 9
text = "Go back"
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="pressed" from="Shop ui/Shop pause menu" to="Shop ui/Shop button/Leave shop" method="_on_shop_pause_menu_pressed"]
[connection signal="pressed" from="Shop ui/Shop button/Leave shop" to="Shop ui/Shop button/Leave shop" method="_on_pressed"]
